Introduce compile() API